--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cached_network_image: ^3.2.3
   introduction_screen: ^3.1.1
   flutter_lorem: ^2.0.0
+  carousel_slider: ^4.2.1
+  flutter_zoom_drawer: ^3.0.3
+  sleek_circular_slider: ^2.0.1
 #Funcional Dependencies
   flutter_localizations:
     sdk: flutter
